<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="dhi2RowModel" type="com.xjtusports.app.modules.dhi16.data.model.Dhi2RowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumngroup253"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearRowgroup253"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup253"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_4pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup253}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_6"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup247"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup247}"
                style="@style/txtSolidRoundedOutline_4" tools:text="@string/lbl_7"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup244"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup244}"
                style="@style/txtSolidRoundedOutline_2" tools:text="@string/lbl_8"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup241"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup241}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_9"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup238"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup238}"
                style="@style/txtSolidRoundedOutline_4" tools:text="@string/lbl_10"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup235"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup235}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_11"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup232"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup232}"
                style="@style/txtSolidRoundedOutline_2" tools:text="@string/lbl_12"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowgroup252"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup252"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_4pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup252}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_13"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup246"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup246}"
                style="@style/txtSolidRoundedOutline_4" tools:text="@string/lbl_14"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup243"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup243}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_15"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup240"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup240}"
                style="@style/txtSolidRoundedOutline_2" tools:text="@string/lbl_16"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup237"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup237}"
                style="@style/txtSolidRoundedOutline_4" tools:text="@string/lbl_17"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup234"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup234}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_18"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup231"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup231}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_19"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowgroup251"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup251"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_4pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup251}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_20"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup245"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup245}"
                style="@style/txtSolidRoundedOutline_4" tools:text="@string/lbl_21"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup242"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup242}"
                style="@style/txtSolidRoundedOutline_2" tools:text="@string/lbl_22"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup239"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup239}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_23"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup236"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup236}"
                style="@style/txtSolidRoundedOutline_4" tools:text="@string/lbl_24"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup233"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup233}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_25"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup230"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup230}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_26"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowgroup254"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup254"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_4pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup254}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_27"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup250"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup250}"
                style="@style/txtSolidRoundedOutline_4" tools:text="@string/lbl_28"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup249"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_6pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup249}"
                style="@style/txtSolidRoundedOutline_5" tools:text="@string/lbl_29"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroup248"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_19pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_6pxh"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{dhi2RowModel.txtGroup248}"
                style="@style/txtSolidRoundedOutline_4" tools:text="@string/lbl_30"/>
        </LinearLayout>
    </LinearLayout>
</layout>
